    match TPRParser. (PR #2408)
  * Added parmed to setup.py
  * Fixed example docs for polymer persistence length (#2582)
  * Fixed HydrogenBondAnalysis to return atom indices rather than atom ids (PR #2572).
    Fixed the check for bond information in the _get_dh_pairs method (Issue #2396).
  * Added missing selection module to leaflet.py (Issue #2612)

Enhancements
  * Added elements attribute to PDBParser (Issue #2553, #2647)
  * Added new density.DensityAnalysis (Issue #2502)
  * Added ability to use Chemfiles as a trajectory reader backend (PR #1862)
  * New analysis.hole2 module for HOLE interfacing. Contains a function (hole)
    for running HOLE on singular PDB files and class (HoleAnalysis) for
    trajectories (PR #2523)
  * Changed selection wildcards to support multiple wildcards (#2436)
  * Added coordinate reader and writer for NAMD binary coordinate format (PR #2485)
  * Improved ClusterCollection and Cluster string representations (Issue #2464)
  * XYZ parser store elements attribute (#2420) and XYZ write uses the elements
    attribute, if present (#2421).
  * Enhanges exception message when trajectory output file has no extension assigned.
  * Uniforms exception handling between Python 2.7 and Python 3: raised exceptions
    do not contain previous exceptions traceback. Uses six package to handle
    py27 and py3 compatibility (PR #2357)
  * Expanded selection wildcards to the start and middle of strings (Issue #2370)
  * Added type checking and conversion to Connection TopologyAttrs (Issue #2373)
  * New analysis.hydrogenbonds.HydrogenBondAnalysis class for the analysis of
    hydrogen bonds. Simpler interface, more extensible and better performance
    than analysis.hbonds.HydrogenBondAnalysis (PR #2237)
  * GSD reader is now supported on Windows (Issue #1923, PR #2384)
  * Empty Universe with 0 atoms is possible (Issue #2383)
  * Added ITPParser to parse GROMACS itp topology files (PR #2381)